--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "sass": "^1.83.4"
   },
   "devDependencies": {
     "@crestron/ch5-shell-utilities-cli": "^2.9.0",
