--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@crestron/ch5-webxpanel": "^2.8.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "eruda": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@crestron/ch5-shell-utilities-cli": "^2.9.0",
     "@crestron/ch5-utilities-cli": "^2.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.37",
