--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@crestron/ch5-shell-utilities-cli": "^2.9.0",
